--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
     </section>
 
     <a id="profilePicture" href="#popup">
-        <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+        <img src="Artboard-1 (2).png" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
         <div class="popup">
             <div class="popup-photo">
-                <a href="https://avatars0.githubusercontent.com/u/43749971" target="_blank">
-                    <img src="https://avatars0.githubusercontent.com/u/43749971" alt="Profile Picture">
+                <a href="/" target="_blank">
+                    <img src="Artboard-1 (2).png" alt="Profile Picture">
                 </a>
             </div>
             <div class="popup-quote">
-                But... the sensation that I've lost something lingers for a longtime after I wake up.
+                Rejoins nous sur Twitch !!!
             </div>
 
             <a class="popup-close" onclick="history.back()">&times;</a>
@@ -41,22 +41,20 @@
     </div>
 
     <div id="links">
-        <a class="link" href="https://github.com/JohnEmerson1406" target="_blank"><i
+        <a class="link" href="https://github.com/EraTorr" target="_blank"><i
                 class="fab fa-github">&nbsp;</i>Github</a>
-        <a class="link" href="https://www.linkedin.com/in/johnemerson1406" target="_blank"><i
+        <a class="link" href="/" target="_blank"><i
                 class="fab fa-linkedin">&nbsp;</i>Linkedin</a>
-        <a class="link" href="https://www.facebook.com/JohnEmerson1406" target="_blank"><i
+        <a class="link" href="/" target="_blank"><i
                 class="fab fa-facebook">&nbsp;</i>Facebook</a>
-        <a class="link" href="https://www.instagram.com/johnemerson1406" target="_blank"><i
+        <a class="link" href="https://www.instagram.com/eratorr.tv" target="_blank"><i
                 class="fab fa-instagram">&nbsp;</i>Instagram</a>
-        <a class="link" href="https://twitter.com/JohnEmerson1406" target="_blank"><i
+        <a class="link" href="/" target="_blank"><i
                 class="fab fa-twitter">&nbsp;</i>Twitter</a>
-        <a class="link" href="https://myanimelist.net/profile/JohnEmerson1406" target="_blank"><i
-                class="fa fa-play-circle">&nbsp;</i>MyAnimeList</a>
     </div>
 
     <div id="hashtag">
-        #SejaFeliz❤
+
     </div>
 
 </body>
