--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="fr-FR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Emerson</title>
+    <title>Eratorr</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="icon" href="Artboard-1 (2).png" type="image/x-icon" />
@@ -24,7 +24,7 @@
     <div class="overlay" id="popup">
         <div class="popup">
             <div class="popup-photo">
-                <a href="/" target="_blank">
+                <a href="/linktree" target="_blank">
                     <img src="Artboard-1 (2).png" alt="Profile Picture">
                 </a>
             </div>
@@ -43,10 +43,6 @@
     <div id="links">
         <a class="link" href="https://github.com/EraTorr" target="_blank"><i
                 class="fab fa-github">&nbsp;</i>Github</a>
-        <a class="link" href="/" target="_blank"><i
-                class="fab fa-linkedin">&nbsp;</i>Linkedin</a>
-        <a class="link" href="/" target="_blank"><i
-                class="fab fa-facebook">&nbsp;</i>Facebook</a>
         <a class="link" href="https://www.instagram.com/eratorr.tv" target="_blank"><i
                 class="fab fa-instagram">&nbsp;</i>Instagram</a>
         <a class="link" href="/" target="_blank"><i
