--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Eratorr</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="icon" href="Artboard-1 (2).png" type="image/x-icon" />
+    <link rel="icon" href="https://eratorr.github.io/linktree/Artboard-1%20(2).png" type="image/x-icon" />
 </head>
 
 <body>
@@ -18,14 +18,14 @@
     </section>
 
     <a id="profilePicture" href="#popup">
-        <img src="Artboard-1 (2).png" alt="Profile Picture">
+        <img src="https://eratorr.github.io/linktree/Artboard-1%20(2).png" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
         <div class="popup">
             <div class="popup-photo">
                 <a href="/linktree" target="_blank">
-                    <img src="Artboard-1 (2).png" alt="Profile Picture">
+                    <img src="https://eratorr.github.io/linktree/Artboard-1%20(2).png" alt="Profile Picture">
                 </a>
             </div>
             <div class="popup-quote">
@@ -41,18 +41,21 @@
     </div>
 
     <div id="links">
-        <a class="link" href="https://github.com/EraTorr" target="_blank"><i
-                class="fab fa-github">&nbsp;</i>Github</a>
+        <a class="link shake" href="https://github.com/EraTorr" target="_blank"><i
+                class="fab fa-discord">&nbsp;</i>Discord</a>
+        <a class="link" href="https://www.instagram.com/eratorr.tv" target="_blank"><i
+                class="fab fa-twitch">&nbsp;</i>Twitch</a>
         <a class="link" href="https://www.instagram.com/eratorr.tv" target="_blank"><i
                 class="fab fa-instagram">&nbsp;</i>Instagram</a>
-        <a class="link" href="/" target="_blank"><i
-                class="fab fa-twitter">&nbsp;</i>Twitter</a>
+        
     </div>
 
-    <div id="hashtag">
-
+    <div id="not-important-link">
+        <a class="" href="https://github.com/EraTorr/linktree" target="_blank"><i
+                class="fab fa-github">&nbsp;</i>Hosted on Github</a>
     </div>
 
+    <div id="hashtag"></div>
 </body>
 
 </html>
