--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
     </div>
 
     <div id="hashtag"></div>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LSQWDKDT1L"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LSQWDKDT1L');
+</script>
 </body>
 
 </html>
