--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </div>
 
     <div id="links">
-        <a class="link shake" href="https://github.com/EraTorr" target="_blank"><i
+        <a class="link shake" href="https://discord.gg/tEz4xsejRD" target="_blank"><i
                 class="fab fa-discord">&nbsp;</i>Discord</a>
-        <a class="link" href="https://www.instagram.com/eratorr.tv" target="_blank"><i
+        <a class="link" href="https://twitch.tv/eratorr" target="_blank"><i
                 class="fab fa-twitch">&nbsp;</i>Twitch</a>
         <a class="link" href="https://www.instagram.com/eratorr.tv" target="_blank"><i
                 class="fab fa-instagram">&nbsp;</i>Instagram</a>
