--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     </section>
 
     <a id="profilePicture" href="#popup">
-        <img src="https://eratorr.github.io/linktree/Artboard-1%20(2).png" alt="Profile Picture">
+        <img src="https://ik.imagekit.io/nrqvxs6itqd/logo_4zJNq_vLng.png" alt="Profile Picture">
     </a>
 
     <div class="overlay" id="popup">
         <div class="popup">
             <div class="popup-photo">
                 <a href="/linktree" target="_blank">
-                    <img src="https://eratorr.github.io/linktree/Artboard-1%20(2).png" alt="Profile Picture">
+                    <img src="https://ik.imagekit.io/nrqvxs6itqd/logo_4zJNq_vLng.png" alt="Profile Picture">
                 </a>
             </div>
             <div class="popup-quote">
