--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Eratorr</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="icon" href="https://eratorr.github.io/linktree/Artboard-1%20(2).png" type="image/x-icon" />
+    <link rel="icon" href="https://ik.imagekit.io/nrqvxs6itqd/logo_4zJNq_vLng.png" type="image/x-icon" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LSQWDKDT1L"></script>
     <script>
@@ -50,17 +50,19 @@
     </div>
 
     <div id="links">
-        <a class="link shake" href="https://discord.gg/tEz4xsejRD" target="_blank"><i
+        <a class="link shake" href="https://discord.gg/tEz4xsejRD" target="_discord"><i
                 class="fab fa-discord">&nbsp;</i>Discord</a>
-        <a class="link" href="https://twitch.tv/eratorr" target="_blank"><i
+        <a class="link" href="https://twitch.tv/eratorr" target="_twitch"><i
                 class="fab fa-twitch">&nbsp;</i>Twitch</a>
-        <a class="link" href="https://www.instagram.com/eratorr.tv" target="_blank"><i
+        <a class="link" href="https://www.instagram.com/eratorr.tv" target="_insta"><i
                 class="fab fa-instagram">&nbsp;</i>Instagram</a>
+        <a class="link" href="/linktree/planning" target="_planning"><i
+                class="fab fa-instagram">&nbsp;</i>Planning</a>
         
     </div>
 
     <div id="not-important-link">
-        <a class="" href="https://github.com/EraTorr/linktree" target="_blank"><i
+        <a class="" href="https://github.com/EraTorr/linktree" target="_github"><i
                 class="fab fa-github">&nbsp;</i>Hosted on Github</a>
     </div>
 
