--- a/planning.html
+++ b/planning.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="planning.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-    <link rel="icon" href="https://eratorr.github.io/linktree/Artboard-1%20(2).png" type="image/x-icon" />
+    <link rel="icon" href="https://ik.imagekit.io/nrqvxs6itqd/logo_4zJNq_vLng.png" type="image/x-icon" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-LSQWDKDT1L"></script>
     <script>
