--- a/planning.html
+++ b/planning.html
@@ -31,6 +31,9 @@
 
     <header>
       <div class="navbar">
+        <div class="hamburger">
+          <i class="fas fa-home"></i>
+        </div>
         <div class="logo">
           <div class="textLogo">Planning ???</div>
         </div>
