--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a class="link" href="https://www.instagram.com/eratorr.tv" target="_insta"><i
                 class="fab fa-instagram">&nbsp;</i>Instagram</a>
         <a class="link" href="/linktree/planning" target="_planning"><i
-                class="fab fa-instagram">&nbsp;</i>Planning</a>
+                class="far fa-calendar-alt">&nbsp;</i>Planning</a>
         
     </div>
 
