--- a/planning.html
+++ b/planning.html
@@ -32,7 +32,7 @@
     <header>
       <div class="navbar">
         <div class="hamburger">
-          <a class="link" href="/linktree" target="_twitch"><i class="fas fa-home"></i></a>
+          <a class="link" href="/linktree"><i class="fas fa-home"></i></a>
         </div>
         <div class="logo">
           <div class="textLogo">Planning ???</div>
